# stl-to-nec

./: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  build.sh  cargo_ship_nec.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md
include/: antenna_detector.h  ez_generator.h  frequency_calculator.h  geometry_utils.h  ground_modeler.h  logger.h  material_database.h  memory_manager.h  nec_generator.h  progress_indicator.h  stl_parser.h  user_interface.h  validator.h
src/: antenna_detector.cpp  ez_generator.cpp  frequency_calculator.cpp  geometry_utils.cpp  ground_modeler.cpp  logger.cpp  main.cpp  material_database.cpp  memory_manager.cpp  nec_generator.cpp  progress_indicator.cpp  stl_parser.cpp  user_interface.cpp
